2006-07-09  Chris Lyttle  <chris@wilddev.net>

	* NEWS: Added some text about the release.
	* configure.in: Change to version 2.0.0
	* src/gnome-utils/glade/totd.glade: Removed 1.8 references
	* doc/README.OFX: Removed 1.8 references
	* doc/tip_of_the_day.list.in: Removed 1.8 references
	* doc/README.german: Removed 1.8 references
	* doc/TRANSLATION_HOWTO: Removed 1.8 references
	* README: Removed 1.8 references
	
2006-07-07  David Hampton  <hampton@cisco.com>

	* src/engine/Transaction.c: Restore 1.8 behavior by using the full
	date/time when sorting on the posted date.  Fixes #346954.

2006-07-06  David Hampton  <hampton@employees.org>

	* src/gnome-utils/dialog-account.c: When creating accounts from
	the register, fix the name parsing logic to correctly handle the
	case where the first new account will be the first child of its
	parent.  Fixes #345771.

2006-07-04  Derek Atkins  <derek@ihtfp.com>

	* src/core-utils/gnc-glib-utils.h
	* src/core-utils/gw-core-utils-spec.scm:
	  Remove the gnc_utf8_validate() API. It's not used anywhere.
	* src/core-utils/gnc-glib-utils.c:
	  Rework gnc_utf8_validate() as a copy-and-paste of g_utf8_validate
	  but ignore certain control characters between 0x00 and 0x20
	  that are not valid XML characters.  Fixes #346535.
	
2006-07-04  Christian Stimming  <stimming@tuhh.de>

	* po/de.po: Proof-read and improved German translation by feedback
	from Andi Köhler.

2006-07-01  David Hampton  <hampton@employees.org>

	* src/quotes/gnc-fq-helper.in: This one file really does require
	the perl Date::Manip module.

2006-07-01  Christian Stimming  <stimming@tuhh.de>

	* po/nl.po, po/glossary/nl.po: Updated Dutch translation by
	Bernard Meens <meensb@xs4all.nl>

2006-06-28  David Hampton  <hampton@employees.org>

	* packaging/gnucash-1.9.x.ebuild:
	* src/quotes/gnc-fq-update.in:
	* src/quotes/gnc-fq-check.in:
	* src/quotes/gnc-fq-helper.in:
	* src/quotes/gnc-fq-dump: Recent version of Finance::Quote no